# SimpleNDArray

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  README.md  bench.csv  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
benchmark/: bench_bmm.py  bench_element_wise.py  bench_reduction.py  torchtest.py  utils.py
docs/: api.md
search/: search_index.json
src/simplendarray/: __init__.py  array.py  buffer.py  buffer_cuda.py  dtypes.py  utils.py
src/simplendarray/kernels/: __init__.py
src/simplendarray/kernels/cpu/: __init__.py  _element_wise_stubs.py  _reduction_stubs.py  bmm.py  element_wise.py  reduction.py
src/simplendarray/kernels/cuda/: __init__.py  _bmm_cuda_stubs.py  _buffer_cuda_stubs.py  _element_wise_cuda_stubs.py  _reduction_cuda_stubs.py  bmm_cuda.py  buffer_cuda.py  element_wise_cuda.py  helpers.py  reduction_cuda.py
src/simplendarray/transpiler/: __init__.py  runtime.py  transpiler.py
tests/: conftest.py  test_array.py  test_buffer.py  test_runtime.py  test_transpiler.py
